--- a/arch/arm/configs/mapphone_defconfig
+++ b/arch/arm/configs/mapphone_defconfig
@@ -1784,7 +1784,7 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
 # CONFIG_HDMI_TI_4XXX_IP is not set
-CONFIG_FB_OMAP_BOOTLOADER_INIT=y
+# CONFIG_FB_OMAP_BOOTLOADER_INIT is not set
 CONFIG_OMAP2_VRAM=y
 CONFIG_OMAP2_VRFB=y
 CONFIG_OMAP2_DSS=y
