--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -191,9 +191,9 @@ obj-$(CONFIG_ARCH_OMAP4)		+= omap_hwmod_44xx_data.o
 obj-$(CONFIG_OMAP3_EMU)			+= emu.o
 
 # L3 interconnect
-ifneq ($(CONFIG_MACH_OMAP_MAPPHONE),y)
+#ifneq ($(CONFIG_MACH_OMAP_MAPPHONE),y)
 obj-$(CONFIG_ARCH_OMAP3)		+= omap_l3_smx.o
-endif
+#endif
 obj-$(CONFIG_ARCH_OMAP4)		+= omap_l3_noc.o
 
 # LDO stuff
@@ -277,12 +277,13 @@ obj-$(CONFIG_MACH_OMAP_MAPPHONE)	   += board-mapphone.o \
 					   board-mapphone-cpcap-client.o \
 					   board-mapphone-spi.o \
 					   board-mapphone-i2c.o \
-					   pmic-cpcap.o \
 					   wakeup-timer.o \
 					   board-mapphone-padconf.o \
 					   board-mapphone-touch.o \
 					   board-mapphone-keypad.o \
-					   board-mapphone-usb.o 
+					   board-mapphone-usb.o \
+					   board-mapphone-bpwake.o \
+					   pmic-cpcap.o 
 obj-$(CONFIG_EMU_UART_DEBUG)		+= board-mapphone-emu_uart.o
 obj-$(CONFIG_MACH_CM_T35)		+= board-cm-t35.o \
 					   hsmmc.o
