--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -35,6 +35,7 @@ obj-$(CONFIG_SENSORS_TSL2550)	+= tsl2550.o
 obj-$(CONFIG_EP93XX_PWM)	+= ep93xx_pwm.o
 obj-$(CONFIG_DS1682)		+= ds1682.o
 obj-$(CONFIG_TI_DAC7512)	+= ti_dac7512.o
+obj-$(CONFIG_SENSORS_LIS3DH)	+= lis331dlh.o
 obj-$(CONFIG_UID_STAT)		+= uid_stat.o
 obj-$(CONFIG_C2PORT)		+= c2port/
 obj-$(CONFIG_IWMC3200TOP)      += iwmc3200top/
@@ -59,4 +60,11 @@ obj-$(CONFIG_GC_CORE)		+= gc-core/
 obj-$(CONFIG_SENSORS_AKM8973_AKMD)	+= akm8973_akmd.o
 obj-$(CONFIG_SENSORS_KXTF9)	+= kxtf9.o
 obj-$(CONFIG_INPUT_HALLEFFECT_BU52014HV) += bu52014hfv.o
+obj-y                           += radio_ctrl/
+obj-$(CONFIG_TCMD_DRIVER)	+= tcmd_driver.o
+obj-y				+= ts27010mux/
+obj-y				+= omap_mdm_ctrl.o
 obj-$(CONFIG_VIB_GPIO)		+= vib-gpio.o
+obj-$(CONFIG_VIB_OMAP_PWM)	+= vib-omap-pwm.o
+obj-$(CONFIG_VIB_PWM)		+= vib-pwm.o
+obj-$(CONFIG_VIB_TIMED)		+= vib-timed.o
