changed to padconf, board-mapphone, mux, ts27010mux, serial, etc. where did the modem go?

--- a/arch/arm/configs/kfazz_defconfig
+++ b/arch/arm/configs/kfazz_defconfig
@@ -286,7 +286,9 @@ CONFIG_OMAP_SMARTREFLEX=y
 CONFIG_OMAP_SMARTREFLEX_CLASS1P5=y
 CONFIG_OMAP_SR_CLASS1P5_RECALIBRATION_DELAY=86400000
 # CONFIG_OMAP_RESET_CLOCKS is not set
-# CONFIG_OMAP_MUX is not set
+CONFIG_OMAP_MUX=y
+CONFIG_OMAP_MUX_DEBUG=y
+CONFIG_OMAP_MUX_WARNINGS=y
 CONFIG_OMAP_MCBSP=y
 CONFIG_OMAP_MBOX_FWK=y
 CONFIG_OMAP_MBOX_KFIFO_SIZE=256
@@ -309,7 +311,7 @@ CONFIG_ARCH_OMAP3=y
 # CONFIG_ARCH_OMAP4 is not set
 CONFIG_SOC_OMAP3430=y
 # CONFIG_SOC_OMAPTI816X is not set
-CONFIG_OMAP_PACKAGE_CBP=y
+CONFIG_OMAP_PACKAGE_CBB=y
 
 #
 # OMAP Board Type
@@ -1095,7 +1097,7 @@ CONFIG_QSC6085_CTRL=y
 #
 # Motorola TS 27.010 Mux driver
 #
-# CONFIG_MOT_FEAT_TS27010MUX is not set
+CONFIG_MOT_FEAT_TS27010MUX=y
 # CONFIG_GC_CORE is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
@@ -1885,10 +1887,7 @@ CONFIG_USB_MON=y
 # USB Host Controller Drivers
 #
 # CONFIG_USB_C67X00_HCD is not set
-CONFIG_USB_EHCI_HCD=y
-# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
-CONFIG_USB_EHCI_TT_NEWSCHED=y
-CONFIG_USB_EHCI_HCD_OMAP=y
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1760_HCD is not set
@@ -1988,7 +1987,7 @@ CONFIG_USB_SERIAL_GENERIC=y
 # CONFIG_USB_SERIAL_MCT_U232 is not set
 # CONFIG_USB_SERIAL_MOS7720 is not set
 # CONFIG_USB_SERIAL_MOS7840 is not set
-CONFIG_USB_SERIAL_MOTOROLA=y
+# CONFIG_USB_SERIAL_MOTOROLA is not set
 # CONFIG_USB_SERIAL_MDM6600 is not set
 CONFIG_USB_QSC6085_CDMA_MODEM=y
 # CONFIG_USB_SERIAL_NAVMAN is not set
