make modem work part 3, working, now to fix hardlock issue

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -282,8 +282,9 @@ obj-$(CONFIG_MACH_OMAP_MAPPHONE)	   += board-mapphone.o \
 					   board-mapphone-touch.o \
 					   board-mapphone-keypad.o \
 					   board-mapphone-usb.o \
-					   board-mapphone-bpwake.o \
-					   pmic-cpcap.o 
+					   pmic-cpcap.o \
+					   board-mapphone-bpwake.o 
+ 
 obj-$(CONFIG_EMU_UART_DEBUG)		+= board-mapphone-emu_uart.o
 obj-$(CONFIG_MACH_CM_T35)		+= board-cm-t35.o \
 					   hsmmc.o
