--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -438,6 +438,14 @@ config INPUT_SFH7741
 	  To compile this driver as a module, choose M here: the
 	  module will be called sfh7741.
 
+config INPUT_SFH7743
+	tristate "SFH7743 Proximity sensor"
+	help
+	  Say Y here if you want to use proximity sensor sfh7743.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called sfh7743.
+
 config INPUT_ADXL34X
 	tristate "Analog Devices ADXL34x Three-Axis Digital Accelerometer"
 	default n
